# SCos

./: .replit  Makefile  replit.nix
.ccls-cache/@@home@runner@workspace/: @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stdarg___gnuc_va_list.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_max_align_t.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_null.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_nullptr_t.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_offsetof.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_ptrdiff_t.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_size_t.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_wchar_t.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@stdarg.h.blob  (+192 more)
SCos/: Makefile  bootloader.asm  linker.ld  run_scos.sh
SCos/apps/: about.cpp  (+24 more)
apps/: about.cpp  notepad.cpp  terminal.hpp
debug/: serial.cpp
drivers/: keyboard.cpp
fs/: ramfs.hpp
include/: stddef.h
interrupt/: idt.hpp
kernel/: main.cpp
memory/: heap.cpp
src/: CMakeLists.txt  Dockerfile  file_system.h  main.cpp  system_services.h  terminal.h  vulkan_renderer.h  window_manger.h
ui/: app_launcher.cpp  desktop.cpp  window_manger.hpp
(+91 files in other folders)
